# mensa-upb-scraper

./: .dockerignore  Cargo.toml  Dockerfile  compose.yml  dev-compose.yml
.sqlx/: query-4fdb615a3e155d8394c70f25d2d8946bed129746b70f92f66704f02093b2e27c.json  query-b94a6b49fb5e53e361da7a890dd5f62d467293454b01175939e32339ee90fd23.json
migrations/: 20241108111824_meals_table.down.sql  20241108111824_meals_table.up.sql
src/: canteen.rs  dish.rs  lib.rs  main.rs  menu.rs  util.rs
