[package]
name = "mensa-upb-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
const_format = "0.2.33"
dotenvy = "0.15.7"
futures = "0.3.31"
itertools = "0.13.0"
num-bigint = "0.4.6"
reqwest = { version = "0.12.9", default-features = false, features = ["charset", "rustls-tls", "http2"] }
scraper = "0.21.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid", "bigdecimal"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "std", "env-filter", "registry", "json", "tracing-log"] }
